--- a/_includes/latest_posts.html
+++ b/_includes/latest_posts.html
@@ -1,10 +1,10 @@
 
           <div class="news">
             {% if site.latest_posts != blank -%}
-            {%- assign latest_posts_size = site.posts | size -%}
+            {%- assign latest_posts_size = site.projects | size -%}
             <div class="table-responsive" {% if site.latest_posts.scrollable and latest_posts_size > 3 %}style="max-height: 60vw"{% endif %}>
               <table class="table table-sm table-borderless">
-              {%- assign latest_posts = site.posts -%}
+              {%- assign latest_posts = site.projects -%}
               {% if site.latest_posts.limit %}
               {% assign latest_posts_limit = site.latest_posts.limit %}
               {% else %}
