--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -48,7 +48,7 @@ layout: default
 
           <!-- Latest posts -->
           {% if page.latest_posts -%}
-            <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest posts</a></h2>
+            <h2><a href="{{ '/projects/' | relative_url }}" style="color: inherit;">Projects</a></h2>
             {%- include latest_posts.html %}
           {%- endif %}
 
